syntax = "proto3";

package order.v1;

option go_package = "likyam.cn/api/gen/go/proto/user/v1";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/order/add"
      body: "*"
    };
  }
  rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse) {
    option (google.api.http) = {
      post: "/v1/order/get"
      body: "*"
    };
  }
  // Healthy
  rpc Healthy (healthyRequest) returns (healthyResponse) {
    option (google.api.http) = {
      get: "/healthy";
    };
  }
}

message Order {
  uint64 order_id = 1;
  string order_no = 2;
  uint64 user_id = 3;
  string user_name = 4;
  string remark = 5;
  double price_total = 6;
  double price_pay = 7;
  double price_paid = 8;
  uint64 status = 9;
  uint64 is_invoice = 10;
  google.protobuf.Timestamp pay_time = 11;
  google.protobuf.Timestamp add_time = 12;
  google.protobuf.Timestamp update_time = 13;
}

message healthyRequest {
}

message healthyResponse {
  uint64 status = 1;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderByIdRequest {
  uint64 order_id = 1;
  uint64 user_id = 2;
}

message GetOrderByIdResponse {
  Order order = 1;
}
